WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300703
WebPage::getWebArchiveOfFrame is never used.
https://bugs.webkit.org/show_bug.cgi?id=300703
Summary
WebPage::getWebArchiveOfFrame is never used.
Gavin
Reported
2025-10-14 08:04:54 PDT
WebPage::getWebArchiveOfFrame is never used and should be removed
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-14 08:05:08 PDT
<
rdar://problem/162603753
>
Gavin
Comment 2
2025-10-14 08:08:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52301
EWS
Comment 3
2025-10-27 11:28:00 PDT
Committed
302193@main
(b76f30c783f2): <
https://commits.webkit.org/302193@main
> Reviewed commits have been landed. Closing PR #52301 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug