WebPage::getWebArchiveOfFrame is never used. https://bugs.webkit.org/show_bug.cgi?id=300703 <rdar://problem/162603753>

Reviewed by Sihui Liu.

Removes WebPage::getWebArchiveOfFrame as it's never called.

* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::getWebArchiveOfFrame): Deleted.
* Source/WebKit/WebProcess/WebPage/WebPage.h:
* Source/WebKit/WebProcess/WebPage/WebPage.messages.in:

Canonical link: https://commits.webkit.org/302193@main